fix(layout): image popup overflow

--- a/blocks/popup/__figure/popup__figure.css
+++ b/blocks/popup/__figure/popup__figure.css
@@ -1,9 +1,9 @@
 .popup__figure{
     margin: auto;
     padding: 0;
-    width: 100%;
+    max-width: 100%;
+    max-height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     position: relative;
 }
